After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709015 - Crash when calling uninhibit
Crash when calling uninhibit
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.10.x
Other Linux
: Normal major
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-29 05:52 UTC by Ross Lagerwall
Modified: 2013-11-03 06:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-operations: Don't crash after failed inhibit (1.98 KB, patch)
2013-09-29 06:16 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Ross Lagerwall 2013-09-29 05:52:14 UTC
If gtk_application_inhibit fails, nautilus crashes when calling gtk_application_uninhibit.
Comment 1 Ross Lagerwall 2013-09-29 06:16:42 UTC
Created attachment 256000 [details] [review]
file-operations: Don't crash after failed inhibit

If gtk_application_inhibit fails, it returns a 0 cookie.  When this
invalid value is passed to gtk_application_uninhibit, Nautilus crashes
if glib or gtk is compiled with minimal debug checks.
So, only call gtk_application_uninhibit if a non-zero cookie is
returned.  Also, use the correct type for inhibit_cookie (guint).
Comment 2 Cosimo Cecchi 2013-09-29 18:16:53 UTC
Review of attachment 256000 [details] [review]:

Looks good to me, thanks.
Comment 3 Ross Lagerwall 2013-11-03 06:13:33 UTC
Pushed to master as fb2eaaa and gnome-3-10 as 8bcb7ac. Thanks.